footer, but content overlap still an issue

--- a/App/client/style/partials/_variables.scss
+++ b/App/client/style/partials/_variables.scss
@@ -21,3 +21,5 @@ $panel-width-XL: 40%;
 $padding-M: 15px;
 $padding-S: 8px;
 
+$footer-height: 50px;
+
